updates to weather gui

--- a/html/md_README.html
+++ b/html/md_README.html
@@ -68,10 +68,9 @@ $(function() {
 <div class="contents">
 <div class="textblock"><p>Widget for weather, stocks, and news. Made with passion using QT and C++.</p>
 <h1><a class="anchor" id="autotoc_md1"></a>
-Project Update - Stage 3</h1>
-<p>For this stage, we emphasized getting the overall structure of the app finished, as well as implementing functionality for viewing Weather data. We changed the number of story points for several of our user stories, as we found that implementing a GUI in QT and similar tasks took longer than expected, and others took shorter than expected. We also made the following changes to user stories</p><ul>
-<li>Added a story giving a SPIKE to figuring out charting in QT - this is essential for displaying stock information</li>
-<li>Merged our stories on navigating to the home back and navigating the previous page into one: we found that these are essentially identical. ' We will focus on implementing APIs next; currently, the Weather Data is "dummy data"</li>
+Project Update - Stage 4</h1>
+<p>We also made the following changes to user stories</p><ul>
+<li>One feature, the display of 24-hour weather, was not implemented because we were unable to get the API to work with both daily and hourly weather.</li>
 </ul>
 <h1><a class="anchor" id="autotoc_md2"></a>
 Building</h1>
