--- a/html/inherits.html
+++ b/html/inherits.html
@@ -89,7 +89,7 @@ $(function() {
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#Date" alt=""/>
 <map name="Date" id="Date">
-<area shape="rect" href="classDate.html" title=" " alt="" coords="5,5,59,32"/>
+<area shape="rect" href="classDate.html" title="The Date class describes a Date." alt="" coords="5,5,59,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_4.png" border="0" usemap="#ErrorBox" alt=""/>
