--- a/html/classDailyStock.html
+++ b/html/classDailyStock.html
@@ -76,7 +76,7 @@ Collaboration diagram for DailyStock:</div>
 <div class="center"><img src="classDailyStock__coll__graph.png" border="0" usemap="#DailyStock_coll__map" alt="Collaboration graph"/></div>
 <map name="DailyStock_coll__map" id="DailyStock_coll__map">
 <area shape="rect" title=" " alt="" coords="5,95,97,121"/>
-<area shape="rect" href="classDate.html" title=" " alt="" coords="25,5,78,32"/>
+<area shape="rect" href="classDate.html" title="The Date class describes a Date." alt="" coords="25,5,78,32"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
