--- a/html/classNewsRecord.html
+++ b/html/classNewsRecord.html
@@ -87,7 +87,7 @@ Collaboration diagram for NewsRecord:</div>
 <area shape="rect" title=" " alt="" coords="69,184,172,211"/>
 <area shape="rect" href="classRecord.html" title=" " alt="" coords="26,95,93,121"/>
 <area shape="rect" href="classCategoryADT.html" title="The CategoryADT class describes a category of information. Abstract class." alt="" coords="5,5,113,32"/>
-<area shape="rect" href="classDate.html" title=" " alt="" coords="117,95,170,121"/>
+<area shape="rect" href="classDate.html" title="The Date class describes a Date." alt="" coords="117,95,170,121"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
